feat(auth): refactor authentication flow and add logout functionality
- Added hashing to refresh tokens
- Updated OpenAPI schema to reflect changes in request and response DTOs.
- Added new endpoint for user logout with appropriate request body and response handling.
- Refactored LoginReqDto to use email instead of username and added and implemented rememberMe property.
- Replaced PasswordService with HashingService for password and token hashing and comparison.
- Updated AuthService to handle login and refresh token logic with new DTOs.
- Implemented cookie handling for refresh tokens using Fastify.
- Added validation schema for environment variables using Joi.
- Created a bootstrap script to generate a default .env file if it doesn't exist.
- Removed unused files and cleaned up code structure for better maintainability.
