# src/modules/auth/dto/login.res.ts
@@ -1,7 +1,0 @@
-import { User } from 'generated/prisma';
-import { TokenRefreshResDto } from './token-refresh.res.dto';
-
-export class LoginResDto {
-  user: User;
-  tokens: TokenRefreshResDto;
-}
