# src/modules/auth/dto/token-refresh.req.dto.ts
@@ -1,3 +1,3 @@
-export class RefreshTokenDto {
-  refreshToken: string;
+export class TokenRefreshReqDto {
+  sessionId: number;
 }
