# src/modules/auth/dto/token-refresh.res.dto.ts
@@ -1,4 +1,4 @@
 export class TokenRefreshResDto {
+  sessionId: number;
   accessToken: string;
-  refreshToken: string;
 }
